add listing event logic
